--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@rspack/cli": "latest",
+    "@rspack/cli": "0.4.0",
+    "@rspack/core": "0.4.0",
     "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1"
